<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acceuil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/image"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_input"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:textAlignment="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/password"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:autofillHints="" />

            <Button
                android:id="@+id/valid"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:text="@string/connection"
                tools:ignore="NestedWeights" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>