<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question1">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="match_parent"
                    android:textColor="@color/purple_500"
                    android:textSize="25sp"
                    android:text="@string/question2"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="RtlHardcoded">

                        <CheckBox
                            android:id="@+id/q2_r1"
                            android:layout_margin="5sp"
                            android:layout_width="100sp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/q2_r1" />

                        <CheckBox
                            android:id="@+id/q2_r2"
                            android:layout_margin="5sp"
                            android:layout_width="100sp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/q2_r2"/>

                        <CheckBox
                            android:id="@+id/q2_r3"
                            android:layout_margin="5sp"
                            android:layout_width="100sp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/q2_r3"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/q2_r4"
                            android:layout_margin="5sp"
                            android:layout_width="100sp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/q2_r4" />

                        <CheckBox
                            android:id="@+id/q2_r5"
                            android:layout_margin="5sp"
                            android:layout_width="100sp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/q2_r5" />

                        <CheckBox
                            android:id="@+id/q2_r6"
                            android:layout_margin="5sp"
                            android:layout_width="100sp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/q2_r6" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/q2_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/q2_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="bottom"
                    android:text="@string/next" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/q2_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:layout_margin="10dp"/>

                <RatingBar
                    android:id="@+id/q2_ratingbar"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:scaleX=".5"
                    android:scaleY=".5"
                    android:isIndicator="true"
                    android:max="5" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>