<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question1">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="match_parent"
                    android:textColor="@color/purple_500"
                    android:textSize="25sp"
                    android:text="@string/question1"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"/>

                <RadioGroup
                    android:id="@+id/q1_groupe"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <RadioButton
                        android:id="@+id/q1_rep1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:tag="true"
                        android:text="@string/q1_r1" />

                    <RadioButton
                        android:id="@+id/q1_rep2"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/q1_r2" />

                    <RadioButton
                        android:id="@+id/q1_rep3"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/q1_r3" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/q1_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/q1_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="bottom"
                    android:text="@string/next" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/q1_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:layout_margin="10dp"/>

                <RatingBar
                    android:id="@+id/q1_ratingbar"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:scaleX=".5"
                    android:scaleY=".5"
                    android:isIndicator="true"
                    android:max="5" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>