<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question5">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:src="@drawable/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:textColor="@color/purple_500"
                    android:layout_width="match_parent"
                    android:textSize="25sp"
                    android:text="@string/question5"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:textSize="17sp"
                        android:layout_height="0dp"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:text="@string/q5_phrase" />

                    <EditText
                        android:id="@+id/q5_r"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="20sp"
                        android:layout_marginRight="20sp"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/q5_startre"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/q5_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/q5_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="bottom"
                    android:text="@string/next" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/q5_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:layout_margin="10dp"/>

                <RatingBar
                    android:id="@+id/q5_ratingbar"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:scaleX=".5"
                    android:scaleY=".5"
                    android:isIndicator="true"
                    android:max="5" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>